--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="navbar">
         <img
           src="asset/img/Screenshot 2024-03-29 210201 1.svg"
           width="100px"
