--- a/index.html
+++ b/index.html
@@ -91,10 +91,13 @@
       
       <img class="legs"
       src="asset/img/openmoji_paw-prints.svg" alt="legs">
+
+      
       <div class="container">
         <div class="aboutUs">
           <h1>About Us</h1>
-          <img src="" alt="">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Laboriosam quia quo repudiandae voluptas neque, <br>quibusdam commodi iste,<br> sit natus amet nobis magnam animi consequatur<br> repellendus sint magni hic nemo ipsa!</p>
+          <img src="asset/img/ImgAbout.jpg" alt="">
 
         </div>
       </div>
