--- a/Login/index.html
+++ b/Login/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Login</title>
 </head>
 <body>
+    <div>
+        <img src="../asset/img/Screenshot 2024-03-29 210201 1.svg" alt="">
+    </div>
+
+    <form class="login-form">
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Enter your email" />
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" placeholder="Enter your password" />
+        </div>
+        <div class="form-options">
+            <div class="checkbox-group">
+                <input type="checkbox" id="remember-me" />
+                <label for="remember-me">Continuar conectado</label>
+            </div>
+            <a href="#" class="forgot-password">Esqueci minha senha</a>
+        </div>
+        <button type="submit" class="login-button">Entrar</button>
+    </form>
+    
     
 </body>
 </html>
