--- a/Login/index.html
+++ b/Login/index.html
@@ -7,7 +7,7 @@
     <title>Login</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <img src="../asset/img/Screenshot 2024-03-29 210201 1.svg" alt="">
     </div>
 
@@ -27,8 +27,15 @@
             </div>
             <a href="#" class="forgot-password">Esqueci minha senha</a>
         </div>
-        <button type="submit" class="login-button">Entrar</button>
+        <button type="submit" class="login-button">Login</button>
     </form>
+
+
+    <footer>
+        <div class="footer">
+            <img src="../asset/img/imgFooter.png" alt="imgFooter">
+        </div>
+    </footer>
     
     
 </body>
