--- a/Login/index.html
+++ b/Login/index.html
@@ -23,9 +23,9 @@
         <div class="form-options">
             <div class="checkbox-group">
                 <input type="checkbox" id="remember-me" />
-                <label for="remember-me">Continuar conectado</label>
+                <label for="remember-me">Stay connected</label>
             </div>
-            <a href="#" class="forgot-password">Esqueci minha senha</a>
+            <a href="#" class="forgot-password">I forgot my password</a>
         </div>
         <button type="submit" class="login-button">Login</button>
     </form>
