--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
 
         <!-- Product Section -->
-        <!-- <div class="product-carousel">
+        <div class="product-carousel">
             <div class="products">
                 <div class="product">
                     <img src="your-product-url.jpg" alt="Product">
@@ -162,7 +162,7 @@
                     <p>$10</p>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <!-- Our Services Section -->
         <!-- <div class="services-section">
