--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="asset/img/Screenshot 2024-03-29 210201 1.svg">
   </head>
   <body>
     <header>
@@ -136,33 +137,51 @@
                     <p>Rabbit</p>
                 </div>
             </div>
+
+            <div class="product-carousel">  
+              <div class="products">  
+                  <div class="product">  
+                      <img src="asset/img/pakanHamster.png" alt="Product">  
+                      <p>Dry Food Chicken</p>  
+                      <p class="price">$10</p>  
+                      <p class="rating">⭐ 4.5</p>  
+                      <button class="favorite">❤️</button>  
+                  </div>  
+                  <div class="product">  
+                      <img src="asset/img/pakanCat.png" alt="Product">  
+                      <p>Dry Food Chicken</p>  
+                      <p class="price">$10</p>  
+                      <p class="rating">⭐ 4.5</p>  
+                      <button class="favorite">❤️</button>  
+                  </div>  
+                  <div class="product">  
+                      <img src="asset/img/pakanDog.png" alt="Product">  
+                      <p>Dry Food Chicken</p>  
+                      <p class="price">$10</p>  
+                      <p class="rating">⭐ 4.5</p>  
+                      <button class="favorite">❤️</button>  
+                  </div>  
+                  <div class="product">  
+                      <img src="asset/img/pakanChicken.png" alt="Product">  
+                      <p>Dry Food Chicken</p>  
+                      <p class="price">$10</p>  
+                      <p class="rating">⭐ 4.5</p>  
+                      <button class="favorite">❤️</button>  
+                  </div>  
+                  <div class="product">  
+                      <img src="asset/img/pakanRabbit.png" alt="Product">  
+                      <p>Dry Food Chicken</p>  
+                      <p class="price">$10</p>  
+                      <p class="rating">⭐ 4.5</p>  
+                      <button class="favorite">❤️</button>  
+                  </div>  
+              </div>  
+          </div>
+
         </div>
 
-        <!-- Product Section -->
-        <div class="product-carousel">
-            <div class="products">
-                <div class="product">
-                    <img src="your-product-url.jpg" alt="Product">
-                    <p>Dry Food Chicken</p>
-                    <p>$10</p>
-                </div>
-                <div class="product">
-                    <img src="your-product-url.jpg" alt="Product">
-                    <p>Dry Food Chicken</p>
-                    <p>$10</p>
-                </div>
-                <div class="product">
-                    <img src="your-product-url.jpg" alt="Product">
-                    <p>Dry Food Chicken</p>
-                    <p>$10</p>
-                </div>
-                <div class="product">
-                    <img src="your-product-url.jpg" alt="Product">
-                    <p>Dry Food Chicken</p>
-                    <p>$10</p>
-                </div>
-            </div>
-        </div>
+        
+       
 
         <!-- Our Services Section -->
         <!-- <div class="services-section">
