--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" type="image/png" href="asset/img/Screenshot 2024-03-29 210201 1.svg">
   </head>
   <body>
@@ -184,7 +185,7 @@
        
 
         <!-- Our Services Section -->
-        <!-- <div class="services-section">
+       <div class="services-section">
             <h2>Our Services</h2>
             <div class="services">
                 <div class="service-card">
