--- a/index.html
+++ b/index.html
@@ -244,32 +244,42 @@
             <div class="product-carousel">  
               <div class="products">  
                   <div class="product">  
+                    <div class="bg-img">
                       <img src="asset/img/pakanHamster.png" alt="Product">  
                       <p>Dry Food Chicken</p>  
                       <p class="price">$10</p>  
                       <p class="rating">⭐ 4.5</p>  
-                      <button class="favorite">❤️</button>  
+                      <button class="favorite">❤️</button> 
+                    </div>
                   </div>  
                   <div class="product">  
+                    <div class="bg-img">
                       <img src="asset/img/pakanCat.png" alt="Product">  
                       <p>Dry Food Chicken</p>  
                       <p class="price">$10</p>  
                       <p class="rating">⭐ 4.5</p>  
-                      <button class="favorite">❤️</button>  
+                      <button class="favorite">❤️</button> 
+                    </div> 
                   </div>  
                   <div class="product">  
+                    <div class="bg-img">
                       <img src="asset/img/pakanDog.png" alt="Product">  
                       <p>Dry Food Chicken</p>  
                       <p class="price">$10</p>  
                       <p class="rating">⭐ 4.5</p>  
                       <button class="favorite">❤️</button>  
+                    </div>
+                      
                   </div>  
                   <div class="product">  
+                    <div class="bg-img">
                       <img src="asset/img/pakanChicken.png" alt="Product">  
                       <p>Dry Food Chicken</p>  
                       <p class="price">$10</p>  
                       <p class="rating">⭐ 4.5</p>  
-                      <button class="favorite">❤️</button>  
+                      <button class="favorite">❤️</button> 
+                    </div>
+                       
                   </div>  
                   <div class="product">  
                       <img src="asset/img/pakanRabbit.png" alt="Product">  
