--- a/index.html
+++ b/index.html
@@ -362,10 +362,38 @@
               </div>
           </div>
       </div>
-      
-
-
     </main>
+
+    <footer>
+      <div class="footer">
+        <div class="footer-container">
+          <div class="footer-content" id="contact">
+            <h3>Contact Us</h3>
+            <ul>
+              <li>email: andinirizky91@gmail.com</li>
+              <li>Phone: 0838 7272 7272</li>
+              <li>Working Hours: Mon-fri 9:00 AM - 6:00 PM</li>
+            </ul>
+          </div>
+
+          <div class="footer-address">
+            <h3>Our Location</h3>
+            <p>Address: Jl. simponi 1, cipondoh,</p>
+            <p>Tangerang, Indonesia</p>
+          </div>
+
+          <div class="footer-maps">
+            <h3>Find Us on the Map</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509407!2d144.9537354153153!3d-37.816218979751654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d43d26fb7fb%3A0x5045675218ce6e0!2sMelbourne%20VIC%2C%20Australia!5e0!3m2!1sen!2sid!4v1649218760190!5m2!1sen!2sid" frameborder="0"></iframe>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy;2024 Petshop. Ryandini</p>
+        </div>
+      </div>
+    </footer>
+
+    
 
     <script src="script.js"></script>
   </body>
